Alteracoes na view de Funcionario

--- a/app/views/funcionarios/edit.html.erb
+++ b/app/views/funcionarios/edit.html.erb
@@ -1,144 +1,9 @@
-<h1>Alterando funcionario</h1>
-
 <% form_for(@funcionario) do |f| %>
   <%= f.error_messages %>
+  <%= render :partial => "form",  :locals => { :f => f} %>
 
-  <p>
-    <%= f.label :tipo %><br />
-    <%= f.check_box :tipo %>
-  </p>
-  <p>
-    <%= f.label :nome %><br />
-    <%= f.text_field :nome %>
-  </p>
-  <p>
-    <%= f.label :endereco %><br />
-    <%= f.text_field :endereco %>
-  </p>
-  <p>
-    <%= f.label :complemento %><br />
-    <%= f.text_field :complemento %>
-  </p>
-  <p>
-    <%= f.label :cep %><br />
-    <%= f.text_field :cep %>
-  </p>
-  <p>
-    <%= f.label :cidade_id %><br />
-    <%= f.text_field :cidade_id %>
-  </p>
-  <p>
-    <%= f.label :uf %><br />
-    <%= f.text_field :uf %>
-  </p>
-  <p>
-    <%= f.label :fone %><br />
-    <%= f.text_field :fone %>
-  </p>
-  <p>
-    <%= f.label :cpf %><br />
-    <%= f.text_field :cpf %>
-  </p>
-  <p>
-    <%= f.label :rg %><br />
-    <%= f.text_field :rg %>
-  </p>
-  <p>
-    <%= f.label :pai %><br />
-    <%= f.text_field :pai %>
-  </p>
-  <p>
-    <%= f.label :mae %><br />
-    <%= f.text_field :mae %>
-  </p>
-  <p>
-    <%= f.label :numero_carteira_trabalho %><br />
-    <%= f.text_field :numero_carteira_trabalho %>
-  </p>
-  <p>
-    <%= f.label :serie_carteira_trabalho %><br />
-    <%= f.text_field :serie_carteira_trabalho %>
-  </p>
-  <p>
-    <%= f.label :titulo_eleitor %><br />
-    <%= f.text_field :titulo_eleitor %>
-  </p>
-  <p>
-    <%= f.label :zona_eleitoral %><br />
-    <%= f.text_field :zona_eleitoral %>
-  </p>
-  <p>
-    <%= f.label :admissao %><br />
-    <%= f.calendar_date_select :admissao %>
-  </p>
-  <p>
-    <%= f.label :registro %><br />
-    <%= f.calendar_date_select :registro %>
-  </p>
-  <p>
-    <%= f.label :nascimento %><br />
-    <%= f.calendar_date_select :nascimento %>
-  </p>
-  <p>
-    <%= f.label :naturalidade %><br />
-    <%= f.text_field :naturalidade %>
-  </p>
-  <p>
-    <%= f.label :estado_civil %><br />
-    <%= f.text_field :estado_civil %>
-  </p>
-  <p>
-    <%= f.label :grau_instrucao %><br />
-    <%= f.text_field :grau_instrucao %>
-  </p>
-  <p>
-    <%= f.label :cadastro_pis %><br />
-    <%= f.calendar_date_select :cadastro_pis %>
-  </p>
-  <p>
-    <%= f.label :numero_pis %><br />
-    <%= f.text_field :numero_pis %>
-  </p>
-  <p>
-    <%= f.label :cod_banco_pis %><br />
-    <%= f.text_field :cod_banco_pis %>
-  </p>
-  <p>
-    <%= f.label :nome_banco_pis %><br />
-    <%= f.text_field :nome_banco_pis %>
-  </p>
-  <p>
-    <%= f.label :cod_agencia_pis %><br />
-    <%= f.text_field :cod_agencia_pis %>
-  </p>
-  <p>
-    <%= f.label :nome_agencia_pis %><br />
-    <%= f.text_field :nome_agencia_pis %>
-  </p>
-  <p>
-    <%= f.label :endereco_banco_pis %><br />
-    <%= f.text_field :endereco_banco_pis %>
-  </p>
-  <p>
-    <%= f.label :demissao %><br />
-    <%= f.date_select :demissao %>
-  </p>
-  <p>
-    <%= f.label :observacao %><br />
-    <%= f.text_area :observacao %>
-  </p>
-  <p>
-    <%= f.label :aci %><br />
-    <%= f.text_area :aci %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.submit 'Salvar' %>
-  </p>
+  <%= f.submit "Salvar" %>
+</p>
 <% end %>
 
-<%= link_to 'Exibir', @funcionario %> |
 <%= link_to 'Voltar', funcionarios_path %>
