--- a/app/views/cidades/show.html.erb
+++ b/app/views/cidades/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_cidade_path(@cidade) %> |
-<%= link_to 'Back', cidades_path %>
+<%= link_to 'Alterar', edit_cidade_path(@cidade) %> |
+<%= link_to 'Voltar', cidades_path %>
