--- a/app/views/roteiros/show.html.erb
+++ b/app/views/roteiros/show.html.erb
@@ -14,5 +14,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_roteiro_path(@roteiro) %> |
-<%= link_to 'Back', roteiros_path %>
+<%= link_to 'Alterar', edit_roteiro_path(@roteiro) %> |
+<%= link_to 'Voltar', roteiros_path %>
