--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing areas</h1>
+<h1>Listagem Areas</h1>
 
 <table>
   <tr>
@@ -12,13 +12,13 @@
     <td><%=h area.descricao %></td>
     <td><%=h area.cidade_id %></td>
     <td><%=h area.roteiro_id %></td>
-    <td><%= link_to 'Show', area %></td>
-    <td><%= link_to 'Edit', edit_area_path(area) %></td>
-    <td><%= link_to 'Destroy', area, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', area %></td>
+    <td><%= link_to 'Alterar', edit_area_path(area) %></td>
+    <td><%= link_to 'Excluir', area, :confirm => 'Tem certeza Que Quer Excluir a Area ?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New area', new_area_path %>
+<%= link_to 'Nova Area', new_area_path %>
