--- a/app/views/areas/new.html.erb
+++ b/app/views/areas/new.html.erb
@@ -1,12 +1,15 @@
-<h1>New area</h1>
+<div>
+    <h1>Nova area</h1>
+    
+    <% form_for(@area) do |f| %>
+    <%= f.error_messages %>
+    
+    <%= render :partial => "form",  :locals => { :f => f} %>
 
-<% form_for(@area) do |f| %>
-  <%= f.error_messages %>
-
-  <%= render :partial => "form",  :locals => { :f => f} %>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', areas_path %>
+    <p>
+    <%= f.submit 'Salvar' %>
+    </p>
+    <% end %>
+    
+    <%= link_to 'Voltar', areas_path %>
+</div>
