--- a/app/views/cidades/index.html.erb
+++ b/app/views/cidades/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing cidades</h1>
+<h1>Listagem cidades</h1>
 
 <table>
   <tr>
@@ -10,13 +10,13 @@
   <tr>
     <td><%=h cidade.uf %></td>
     <td><%=h cidade.cidade %></td>
-    <td><%= link_to 'Show', cidade %></td>
-    <td><%= link_to 'Edit', edit_cidade_path(cidade) %></td>
-    <td><%= link_to 'Destroy', cidade, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', cidade %></td>
+    <td><%= link_to 'Alterar', edit_cidade_path(cidade) %></td>
+    <td><%= link_to 'Excluir', cidade, :confirm => 'Você Tem Certeza Que Quer Excluir a Cidade ?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New cidade', new_cidade_path %>
+<%= link_to 'Nova cidade', new_cidade_path %>
