--- a/app/views/regioes/new.html.erb
+++ b/app/views/regioes/new.html.erb
@@ -1,15 +1,13 @@
-<h1>New regiao</h1>
+<h1>Nova Regiao</h1>
 
 <% form_for(@regiao) do |f| %>
   <%= f.error_messages %>
 
+  <%= render :partial => "form",  :locals => { :f => f} %>
+
   <p>
-    <%= f.label :descricao %><br />
-    <%= f.text_field :descricao %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', regioes_path %>
+<%= link_to 'Voltar', regioes_path %>
