--- a/app/views/roteiros/edit.html.erb
+++ b/app/views/roteiros/edit.html.erb
@@ -1,24 +1,14 @@
-<h1>Editing roteiro</h1>
+<h1>Alterar Roteiro</h1>
 
 <% form_for(@roteiro) do |f| %>
   <%= f.error_messages %>
 
+  <%= render :partial => "form",  :locals => { :f => f} %>
+
   <p>
-    <%= f.label :descricao %><br />
-    <%= f.text_field :descricao %>
-  </p>
-  <p>
-    <%= f.label :funcionario_id %><br />
-    <%= f.text_field :funcionario_id %>
-  </p>
-  <p>
-    <%= f.label :regiao_id %><br />
-    <%= f.text_field :regiao_id %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @roteiro %> |
-<%= link_to 'Back', roteiros_path %>
+<%= link_to 'Exibir', @roteiro %> |
+<%= link_to 'Voltar', roteiros_path %>
