--- a/app/views/roteiros/index.html.erb
+++ b/app/views/roteiros/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing roteiros</h1>
+<h1>Listagem Roteiros</h1>
 
 <table>
   <tr>
     <th>Descricao</th>
-    <th>Funcionario</th>
-    <th>Regiao</th>
+    <th>Funcionário</th>
+    <th>Região</th>
   </tr>
 
 <% @roteiros.each do |roteiro| %>
@@ -12,13 +12,13 @@
     <td><%=h roteiro.descricao %></td>
     <td><%=h roteiro.funcionario_id %></td>
     <td><%=h roteiro.regiao_id %></td>
-    <td><%= link_to 'Show', roteiro %></td>
-    <td><%= link_to 'Edit', edit_roteiro_path(roteiro) %></td>
-    <td><%= link_to 'Destroy', roteiro, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', roteiro %></td>
+    <td><%= link_to 'Alterar', edit_roteiro_path(roteiro) %></td>
+    <td><%= link_to 'Excluir', roteiro, :confirm => 'Você Tem certeza Que Quer Excluir o Roteiro ?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New roteiro', new_roteiro_path %>
+<%= link_to 'Novo Roteiro', new_roteiro_path %>
