--- a/app/views/roteiros/new.html.erb
+++ b/app/views/roteiros/new.html.erb
@@ -1,23 +1,13 @@
-<h1>New roteiro</h1>
+<h1>Novo Roteiro</h1>
 
 <% form_for(@roteiro) do |f| %>
   <%= f.error_messages %>
 
+  <%= render :partial => "form",  :locals => { :f => f} %>
+
   <p>
-    <%= f.label :descricao %><br />
-    <%= f.text_field :descricao %>
-  </p>
-  <p>
-    <%= f.label :funcionario_id %><br />
-    <%= f.text_field :funcionario_id %>
-  </p>
-  <p>
-    <%= f.label :regiao_id %><br />
-    <%= f.text_field :regiao_id %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', roteiros_path %>
+<%= link_to 'Voltar', roteiros_path %>
