--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,7 +1,8 @@
 <table border="1">
   <tr>
     <th>Tipo</th>
-    <th>Cpf_Cnpj</th>
+    <th>Cpf</th>
+    <th>Cnpj</th>
     <th>Razao social</th>
     <th>Nome fantasia</th>
     <th>Cidade</th>
@@ -12,7 +13,8 @@
 <% for cliente in @clientes %>
   <tr>
     <td><%= cliente.tipo_cliente == "F" ? "Pessoa Física" : "Pessoa Jurídica" %></td>
-    <td><%=h cpf_cnpj_formatado(cliente.cpf_cnpj) %></td>
+    <td><%=h cpf_formatado(cliente.cpf) %></td>
+    <td><%=h cnpj_formatado(cliente.cnpj) %></td>
     <td><%=h cliente.razao_social %></td>
     <td><%=h cliente.nome_fantasia %></td>
     <%if cliente.cidade.nil? then %>
